[package]
name = "bouncy_king"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1" }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
bevy_ecs_ldtk = { git = "https://github.com/theshortcut/bevy_ecs_ldtk/", branch = "bevy-0.13", features = [
    "external_levels",
] }
bevy_rapier2d = { version = "*", features = ["simd-stable", "debug-render-2d"] }
benimator = "4.1.3"


[target.'cfg(not(target_family = "wasm"))'.dependencies.bevy]
version = "0.13.1"
features = ["dynamic_linking"]

[target.'cfg(not(target_family = "wasm"))'.dependencies.bevy_dylib]
version = "0.13.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
embed-resource = "1"

[profile.release]
lto = true
strip = true
opt-level = 3
panic = "abort"
codegen-units = 1
debug = false

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap" }
